--- a/SmogApp/Base.lproj/Main.storyboard
+++ b/SmogApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -569,12 +569,16 @@ Poziom alarmowy stężenia średniego 1-godzinnego: 500 μg/m3
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SRc-dq-G7W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2616" y="-167"/>
+            <point key="canvasLocation" x="2786" y="-289"/>
         </scene>
         <!--Image Slider View Controller-->
         <scene sceneID="cr1-dC-APu">
             <objects>
                 <viewController id="xug-M4-3f3" customClass="TNImageSliderViewController" customModule="TNImageSliderViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2J6-Ps-ebG"/>
+                        <viewControllerLayoutGuide type="bottom" id="ajk-0H-uON"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="2Kp-gC-sQl">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -583,7 +587,7 @@ Poziom alarmowy stężenia średniego 1-godzinnego: 500 μg/m3
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xxj-MY-2GY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2623" y="1757"/>
+            <point key="canvasLocation" x="2649" y="1874"/>
         </scene>
     </scenes>
     <resources>
